fix spacing

--- a/boston-weather-viz/src/styles/main.scss
+++ b/boston-weather-viz/src/styles/main.scss
@@ -19,7 +19,7 @@ body {
     -webkit-appearance: none;
     background: none;
     border-radius: 0;
-    padding: 10px 0px 10px 20px;
+    padding: 35px 0px 10px 20px;
     height: auto;
     font-size: 40px;
     border: 0;
@@ -32,7 +32,7 @@ body {
     font-size: 20px;
     position: absolute;
     right: -30px;
-    top: 23px;
+    top: 50px;
   }
   &:before {
     content: "";
